# rais-sc-analytics

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
data/dict/: dicionario_cbo.xlsx
data/reference/: municipios_sc_mesorregioes.csv
docs/: EXEMPLOS.md  GUIA_USUARIO.md  RELEASE_CHECKLIST.md
examples/: README.md  sample_remuneracao_media_ano_industrial_sc_cbo_ocupacao_2024.csv  sample_remuneracao_media_ano_industrial_sc_cbo_ocupacao_2024.xlsx  sample_validacao.csv  sample_validacao.xlsx
scripts/: create_example_workbooks.py  create_orientacoes_usuario_final_doc.py  create_validacao_remuneracao_media_ano.py  run_rais_sc.py  run_remuneracao_3112_cbo_subclasse_sc.py  run_remuneracao_industrial_cbo_ocupacao_sc.py  run_remuneracao_media_sc.py
src/: __init__.py  download_rais.py  rais_sc_pipeline.py
